# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  Polygonal.hpp  README.md  Utils.cpp  main.cpp  main_test.cpp
Polygonal/: Cartel4.csv  Cell0IDs.csv  Cell0ODs.csv  Cell0TDs.csv  Cell1IDs.csv  Cell1ODs.csv  Cell1TDs.csv  Cell2IDs.csv  Cell2ODs.csv  Cell2TDs.csv
PolygonalMesh/: Cell0Ds.csv.xlsx  Cell1Ds.csv.xlsx  Cell2Ds.csv.xlsx
src/: CMakeLists.txt  Polygonal.hpp  Utils.cpp  Utils.hpp
src_test/: CMakeLists.txt  test_algorithm.hpp
